test/pass/codegen/actions/enblastEffect/test.twge
block init {
    actions {
        enblastEffect(fromActor = "{instance}", toAngle = "{angle}");
    }
}