test/fail/codegen/instruction/test.twge
block init {
    actions {
        addActor(myKey = 123, myKey = 234);
    }
}